k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: html
  namespace: javeriana
spec:
  selector:
    matchLabels:
      app: html
  replicas: 1
  template:
    metadata:
      labels:
         app: html
    spec:
      containers:
         - name: html
           image: localhost:5000/jtest
           ports:
              - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: html
  namespace: javeriana
spec:
  selector:
    app: html
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
