k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: html
   namespace: javeriana
spec:
   ingressClassName: public
   rules:
   - host: jtest.dynaco.co
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: html
             port:
               number: 80
